objects/InterfacePriceBookProduct__c.object
<CustomObject>
    <description>DataRaptor Integration Object for PriceBook and Products</description>
    <fields>
        <fullName>ApplicableSubtype__c</fullName>
        <label>Applicable Subtype</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApplicableType__c</fullName>
        <label>Applicable Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttributeName__c</fullName>
        <label>Attribute Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>Attribute Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_Display_Sequence__c</fullName>
        <label>Attribute Display Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryCode__c</fullName>
        <label>Category Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Configurable__c</fullName>
        <label>Configurable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRBundleName__c</fullName>
        <label>DR Bundle Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRError__c</fullName>
        <label>DR Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRProgressData__c</fullName>
        <label>DR Progress Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRStatus__c</fullName>
        <label>DR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filterable__c</fullName>
        <label>Filterable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FloorPrice__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverageCharge__c</fullName>
        <label>Overage Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverageUOM__c</fullName>
        <label>Overage UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBEntryActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Book Entry Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceBookActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Book Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceBookDescription__c</fullName>
        <label>Price Book Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriceBookName__c</fullName>
        <label>Price Book Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecurringPrice__c</fullName>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecurringUOM__c</fullName>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UIControlType__c</fullName>
        <label>UI Control Type</label>
        <type>TextArea</type>
    </fields>
    <label>Interface PriceBook Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DRBundleName__c</columns>
        <columns>DRError__c</columns>
        <columns>DRProgressData__c</columns>
        <columns>DRStatus__c</columns>
        <columns>PriceBookActive__c</columns>
        <columns>PriceBookName__c</columns>
        <columns>ProductName__c</columns>
        <columns>ProductCode__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>RecurringPrice__c</columns>
        <columns>RecurringUOM__c</columns>
        <columns>OverageCharge__c</columns>
        <columns>OverageUOM__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DR IO PriceBook Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface PriceBooks Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>